force-app/main/default/objects/Activity/fields/aircall__Detailed_type__c.field-meta.xml
<CustomField>
    <fullName>aircall__Detailed_type__c</fullName>
    <formula>IF(CONTAINS(LOWER(Subject), &apos;missed&apos;), &apos;Missed call&apos;,
 IF(CONTAINS(LOWER(Subject), &apos;voicemail&apos;), &apos;Voicemail&apos;,
 IF(CONTAINS(LOWER(Subject), &apos;outbound unanswered&apos;), &apos;Outbound unanswered&apos;,
 IF(CONTAINS(LOWER(Subject), &apos;outbound&apos;), &apos;Outbound answered&apos;,
 IF(CONTAINS(LOWER(Subject), &apos;inbound&apos;), &apos;Inbound answered&apos;,
  TEXT(CallType) 
)))))</formula>
    <label>Detailed type</label>
    <type>Text</type>
</CustomField>