force-app/main/default/objects/Activity/fields/aircall__Hour_of_the_day__c.field-meta.xml
<CustomField>
    <fullName>aircall__Hour_of_the_day__c</fullName>
    <formula>LEFT(TEXT(TIMEVALUE(DATETIMEVALUE(CreatedDate) + aircall__Timezone__c/24)), 2)+&apos;:00&apos;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Hour of the day</label>
    <type>Text</type>
</CustomField>