force-app/main/default/objects/Activity/fields/aircall__Missed_Call_Ratio__c.field-meta.xml
<CustomField>
    <fullName>aircall__Missed_Call_Ratio__c</fullName>
    <formula>IF(CONTAINS(CallDisposition, &quot;out_of_opening_hours&quot;), &quot;Out of opening hours&quot;, 
IF(CONTAINS(CallDisposition, &quot;no_available_agent&quot;), &quot;No available agent&quot;, 
IF(CONTAINS(CallDisposition, &quot;abandoned_in_ivr&quot;), &quot;Abandoned in IVR&quot;, 
IF(CONTAINS(CallDisposition, &quot;short_abandoned&quot;), &quot;Short abandoned&quot;, 
IF(CONTAINS(CallDisposition, &quot;agents_did_not_answer&quot;), &quot;Agents did not response&quot;, NULL)))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Missed Call Ratio</label>
    <type>Text</type>
</CustomField>