force-app/main/default/objects/Activity/fields/Due_Time__c.field-meta.xml
<CustomField>
    <fullName>Due_Time__c</fullName>
    <label>Due Time</label>
    <type>Time</type>
</CustomField>